@@ -90,6 +90,7 @@ static const decode_table_t oDecodeTable[] =
   { "ALIGN", DTABLE_CALLBACK_VOID, { .vd = c_align } }, /* ALIGN */
   { "AND", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_and } }, /* AND CC S */
   { "AREA", DTABLE_CALLBACK_VOID, { .vd = c_area } }, /* AREA */
+  { "ARM", DTABLE_CALLBACK_VOID, { .vd = c_code32 } }, /* ARM/CODE32 */
   { "ASN", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_asn } }, /* ASN CC P R */
   { "ASSERT", DTABLE_CALLBACK_VOID, { .vd = c_assert } }, /* ASSERT */
   { "ATN", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_atn } }, /* ATN CC P R */
@@ -107,7 +108,7 @@ static const decode_table_t oDecodeTable[] =
   { "CN", DTABLE_CALLBACK_SYMBOL, { .sym = c_cn } }, /* CN */
   { "CNF", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_cnf } }, /* CNF CC or CNFE CC */
   { "CODE16", DTABLE_CALLBACK_VOID, { .vd = c_code16 } }, /* CODE16 */
-  { "CODE32", DTABLE_CALLBACK_VOID, { .vd = c_code32 } }, /* CODE32 */
+  { "CODE32", DTABLE_CALLBACK_VOID, { .vd = c_code32 } }, /* ARM/CODE32 */
   { "COS", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_cos } }, /* COS CC P R */
   { "CP", DTABLE_CALLBACK_SYMBOL, { .sym = c_cp } }, /* CP */
   { "DCB", DTABLE_CALLBACK_VOID, { .vd = c_dcb } }, /* DCB */
@@ -117,6 +118,7 @@ static const decode_table_t oDecodeTable[] =
   { "DCI", DTABLE_CALLBACK_VOID, { .vd = c_dci } }, /* DCI */
   { "DCW", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = c_dcw } }, /* DCW / DCWU */
   { "DVF", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_dvf } }, /* DVF CC P R */
+  { "ELIF", DTABLE_CALLBACK_LEX, { .lbl = c_elif } }, /* ELIF */
   { "ELSE", DTABLE_CALLBACK_LEX, { .lbl = c_else } }, /* | ELSE */
   { "END", DTABLE_CALLBACK_VOID, { .vd = c_end } }, /* END */
   { "ENDIF", DTABLE_CALLBACK_LEX, { .lbl = c_endif } }, /* ] ENDIF */
@@ -240,6 +242,8 @@ static const decode_table_t oDecodeTable[] =
   { "TAIL", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_tail } }, /* TAIL CC */
   { "TAN", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_tan } }, /* TAN CC P R */
   { "TEQ", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_teq } }, /* TEQ CC */
+  { "THUMB", DTABLE_CALLBACK_VOID, { .vd = c_thumb } }, /* THUMB */
+  { "THUMBX", DTABLE_CALLBACK_VOID, { .vd = c_thumbx } }, /* THUMBX */
   { "TST", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_tst } }, /* TST CC */
   { "TTL", DTABLE_CALLBACK_VOID, { .vd = c_title } }, /* TTL */
   { "UMLAL", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_umlal } }, /* UMLAL CC */
